examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__expression_statements.snap
---
source: examples/ast-python/src/tests/corpus/statements.rs
expression: "get_ast(& db, file)"
---
ParsedAst {
    nodes: [
        Module {
            children: [
                AstNodeId {
                    id: 1,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
                AstNodeId {
                    id: 3,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
                AstNodeId {
                    id: 8,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
                AstNodeId {
                    id: 12,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
            ],
            _range: Range {
                start_byte: 1,
                end_byte: 26,
                start_point: Point {
                    row: 1,
                    column: 0,
                },
                end_point: Point {
                    row: 5,
                    column: 0,
                },
            },
            _id: 0,
            _parent: None,
            _is_missing: false,
        },
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        AstNodeId {
                            id: 2,
                            _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_Yield>,
                        },
                    ],
                    _range: Range {
                        start_byte: 1,
                        end_byte: 2,
                        start_point: Point {
                            row: 1,
                            column: 0,
                        },
                        end_point: Point {
                            row: 1,
                            column: 1,
                        },
                    },
                    _id: 1,
                    _parent: Some(
                        0,
                    ),
                    _is_missing: false,
                },
            ),
        ),
        Expression(
            PrimaryExpression(
                Identifier(
                    Identifier {
                        _range: Range {
                            start_byte: 1,
                            end_byte: 2,
                            start_point: Point {
                                row: 1,
                                column: 0,
                            },
                            end_point: Point {
                                row: 1,
                                column: 1,
                            },
                        },
                        _id: 2,
                        _parent: Some(
                            1,
                        ),
                        _is_missing: false,
                    },
                ),
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        AstNodeId {
                            id: 4,
                            _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_Yield>,
                        },
                    ],
                    _range: Range {
                        start_byte: 3,
                        end_byte: 8,
                        start_point: Point {
                            row: 2,
                            column: 0,
                        },
                        end_point: Point {
                            row: 2,
                            column: 5,
                        },
                    },
                    _id: 3,
                    _parent: Some(
                        0,
                    ),
                    _is_missing: false,
                },
            ),
        ),
        Expression(
            PrimaryExpression(
                BinaryOperator(
                    BinaryOperator {
                        left: AstNodeId {
                            id: 5,
                            _marker: PhantomData<ast_python::generated::PrimaryExpression>,
                        },
                        operator: AstNodeId {
                            id: 6,
                            _marker: PhantomData<ast_python::generated::Operators_1>,
                        },
                        right: AstNodeId {
                            id: 7,
                            _marker: PhantomData<ast_python::generated::PrimaryExpression>,
                        },
                        _range: Range {
                            start_byte: 3,
                            end_byte: 8,
                            start_point: Point {
                                row: 2,
                                column: 0,
                            },
                            end_point: Point {
                                row: 2,
                                column: 5,
                            },
                        },
                        _id: 4,
                        _parent: Some(
                            3,
                        ),
                        _is_missing: false,
                    },
                ),
            ),
        ),
        Identifier(
            Identifier {
                _range: Range {
                    start_byte: 3,
                    end_byte: 4,
                    start_point: Point {
                        row: 2,
                        column: 0,
                    },
                    end_point: Point {
                        row: 2,
                        column: 1,
                    },
                },
                _id: 5,
                _parent: Some(
                    4,
                ),
                _is_missing: false,
            },
        ),
        Token_Plus(
            Token_Plus {
                _range: Range {
                    start_byte: 5,
                    end_byte: 6,
                    start_point: Point {
                        row: 2,
                        column: 2,
                    },
                    end_point: Point {
                        row: 2,
                        column: 3,
                    },
                },
                _id: 6,
                _parent: Some(
                    4,
                ),
                _is_missing: false,
            },
        ),
        Identifier(
            Identifier {
                _range: Range {
                    start_byte: 7,
                    end_byte: 8,
                    start_point: Point {
                        row: 2,
                        column: 4,
                    },
                    end_point: Point {
                        row: 2,
                        column: 5,
                    },
                },
                _id: 7,
                _parent: Some(
                    4,
                ),
                _is_missing: false,
            },
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        AstNodeId {
                            id: 9,
                            _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_Yield>,
                        },
                        AstNodeId {
                            id: 10,
                            _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_Yield>,
                        },
                        AstNodeId {
                            id: 11,
                            _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_Yield>,
                        },
                    ],
                    _range: Range {
                        start_byte: 9,
                        end_byte: 16,
                        start_point: Point {
                            row: 3,
                            column: 0,
                        },
                        end_point: Point {
                            row: 3,
                            column: 7,
                        },
                    },
                    _id: 8,
                    _parent: Some(
                        0,
                    ),
                    _is_missing: false,
                },
            ),
        ),
        Expression(
            PrimaryExpression(
                Integer(
                    Integer {
                        _range: Range {
                            start_byte: 9,
                            end_byte: 10,
                            start_point: Point {
                                row: 3,
                                column: 0,
                            },
                            end_point: Point {
                                row: 3,
                                column: 1,
                            },
                        },
                        _id: 9,
                        _parent: Some(
                            8,
                        ),
                        _is_missing: false,
                    },
                ),
            ),
        ),
        Expression(
            PrimaryExpression(
                Integer(
                    Integer {
                        _range: Range {
                            start_byte: 12,
                            end_byte: 13,
                            start_point: Point {
                                row: 3,
                                column: 3,
                            },
                            end_point: Point {
                                row: 3,
                                column: 4,
                            },
                        },
                        _id: 10,
                        _parent: Some(
                            8,
                        ),
                        _is_missing: false,
                    },
                ),
            ),
        ),
        Expression(
            PrimaryExpression(
                Integer(
                    Integer {
                        _range: Range {
                            start_byte: 15,
                            end_byte: 16,
                            start_point: Point {
                                row: 3,
                                column: 6,
                            },
                            end_point: Point {
                                row: 3,
                                column: 7,
                            },
                        },
                        _id: 11,
                        _parent: Some(
                            8,
                        ),
                        _is_missing: false,
                    },
                ),
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        AstNodeId {
                            id: 13,
                            _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_Yield>,
                        },
                        AstNodeId {
                            id: 14,
                            _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_Yield>,
                        },
                        AstNodeId {
                            id: 15,
                            _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_Yield>,
                        },
                    ],
                    _range: Range {
                        start_byte: 17,
                        end_byte: 25,
                        start_point: Point {
                            row: 4,
                            column: 0,
                        },
                        end_point: Point {
                            row: 4,
                            column: 8,
                        },
                    },
                    _id: 12,
                    _parent: Some(
                        0,
                    ),
                    _is_missing: false,
                },
            ),
        ),
        Expression(
            PrimaryExpression(
                Integer(
                    Integer {
                        _range: Range {
                            start_byte: 17,
                            end_byte: 18,
                            start_point: Point {
                                row: 4,
                                column: 0,
                            },
                            end_point: Point {
                                row: 4,
                                column: 1,
                            },
                        },
                        _id: 13,
                        _parent: Some(
                            12,
                        ),
                        _is_missing: false,
                    },
                ),
            ),
        ),
        Expression(
            PrimaryExpression(
                Integer(
                    Integer {
                        _range: Range {
                            start_byte: 20,
                            end_byte: 21,
                            start_point: Point {
                                row: 4,
                                column: 3,
                            },
                            end_point: Point {
                                row: 4,
                                column: 4,
                            },
                        },
                        _id: 14,
                        _parent: Some(
                            12,
                        ),
                        _is_missing: false,
                    },
                ),
            ),
        ),
        Expression(
            PrimaryExpression(
                Integer(
                    Integer {
                        _range: Range {
                            start_byte: 23,
                            end_byte: 24,
                            start_point: Point {
                                row: 4,
                                column: 6,
                            },
                            end_point: Point {
                                row: 4,
                                column: 7,
                            },
                        },
                        _id: 15,
                        _parent: Some(
                            12,
                        ),
                        _is_missing: false,
                    },
                ),
            ),
        ),
    ],
}
