examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__function_definitions@def e(**list: str):  pass.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        CompoundStatement(
            FunctionDefinition(
                FunctionDefinition {
                    name: Identifier {
                        [RANGE]
                    },
                    body: Block {
                        alternative: [],
                        children: [
                            SimpleStatement(
                                PassStatement(
                                    PassStatement {
                                        [RANGE]
                                    },
                                ),
                            ),
                        ],
                        [RANGE]
                    },
                    return_type: None,
                    type_parameters: None,
                    parameters: Parameters {
                        children: [
                            TypedParameter(
                                TypedParameter {
                                    Type: Type {
                                        children: Expression(
                                            PrimaryExpression(
                                                Identifier(
                                                    Identifier {
                                                        [RANGE]
                                                    },
                                                ),
                                            ),
                                        ),
                                        [RANGE]
                                    },
                                    children: DictionarySplatPattern(
                                        DictionarySplatPattern {
                                            children: Identifier(
                                                Identifier {
                                                    [RANGE]
                                                },
                                            ),
                                            [RANGE]
                                        },
                                    ),
                                    [RANGE]
                                },
                            ),
                        ],
                        [RANGE]
                    },
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
